--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_native_splash: ^2.3.7
   flutter_svg: ^1.1.6
+  google_fonts: ^6.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
