--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_native_splash: ^2.3.7
   flutter_svg: ^1.1.6
   google_fonts: ^6.1.0
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
