--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^1.1.6
   google_fonts: ^6.1.0
   carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
